--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ Django==4.0.3
 django-extensions==3.1.5
 django-import-export==2.8.0
 django-autocomplete-light==3.9.4
+djangorestframework==3.13.1
+django-oauth-toolkit==2.0.0
+django-filter==21.1
+drf-nested-routers==0.93.4
+uritemplate==4.1.1
